# Triase-ML

./: .gitignore  README.md  param_grid.json  pyproject.toml  run_sweep.ps1  run_sweep.sh  run_sweep_shap_all_models.ps1  run_sweep_smoke.ps1  run_triase.py
triase_ml/configs/: schema.py
triase_ml/data/: cleaning.py  io.py
triase_ml/features/: selectors.py
triase_ml/models/: registry.py
triase_ml/training/: elimination.py  metrics.py  runner.py  tuning.py
triase_ml/viz/: plots.py  shap_viz.py
