[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triase-ml"
version = "0.1.0"
description = "Modular pipeline for triage diagnosis/handling classification"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "joblib",
  "openpyxl",
  "shap"
]

[tool.setuptools.packages.find]
where = ["."]
